# text2sql

./: .env.example  .gitignore  README.md  pyproject.toml  text2sql.db
src/: api.py  models.py
src/endpoints/: __init__.py  conversation.py  conversation_group.py
src/services/: db_service.py  gemini_service.py
src/templates/: base.html  chat-input.html  chat-messages.html  index.html
src/templates/partials/: chat-input.html  conversation-group.html  edit-delete-conversation-group.html  footer.html  sidebar.html
tests/: test_db_service.py  test_gemini_service.py
text2sql/: models.py
text2sql/endpoints/: __init__.py  conversation.py  conversation_group.py  index.py  project.py
text2sql/services/: __init__.py  db_service.py
text2sql/templates/: base.html  index.html  project-select.html
text2sql/templates/partials/: chat-input.html  conversation-group.html  edit-delete-conversation-group.html  sidebar.html
