[project]
name = "text2sql"
version = "0.1.0"
description = ""
authors = [
    {name = "codera21",email = "atul.nepal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "google-genai (>=1.2.0,<2.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
